kernel/tests/snapshots/runtime_cli_snapshots/validate_paper_faithfulness_result__fail.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "comments": "Need a better excerpt.",
      "overall": "REJECT",
      "paper_faithfulness": {
        "decision": "FAIL",
        "issues": [
          {
            "description": "Still mismatched.",
            "node": "main_result"
          }
        ]
      },
      "summary": "Paper mismatch remains"
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_paper_faithfulness_result_ok"
}
