kernel/tests/snapshots/runtime_cli_snapshots/validate_paper_faithfulness_result__pass.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "comments": "",
      "overall": "APPROVE",
      "paper_faithfulness": {
        "decision": "PASS",
        "issues": []
      },
      "summary": "Paper matches Lean statements."
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_paper_faithfulness_result_ok"
}
